# NickelEngine

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  ReadMe.md  TODO.txt  doc.md  imgui.ini
3rdlibs/: CMakeLists.txt
3rdlibs/debugbreak/: CMakeLists.txt
3rdlibs/glad/: CMakeLists.txt
3rdlibs/glad/src/: glad.c
3rdlibs/imgui/: CMakeLists.txt
3rdlibs/imgui/ImGuizmo/: CMakeLists.txt  ImGuizmo.cpp  ImSequencer.cpp
3rdlibs/imgui/dear-imgui/: CMakeLists.txt
3rdlibs/miniaudio/: CMakeLists.txt
3rdlibs/nameof/: CMakeLists.txt
3rdlibs/nanobench/: CMakeLists.txt  nanobench.cpp
3rdlibs/rapidxml/: CMakeLists.txt
3rdlibs/sdl2/: CMakeLists.txt
3rdlibs/stb_image/: CMakeLists.txt
3rdlibs/tomlplusplus/: CMakeLists.txt
3rdlibs/tomlplusplus/toml++/: toml.cpp  toml.hpp
3rdlibs/vulkan/: CMakeLists.txt
editor/: CMakeLists.txt
editor/resources/: file_icon_map.toml
editor/src/: anim_editor.cpp  anim_editor.hpp  asset_list_window.cpp  asset_list_window.hpp  asset_property_window.cpp  asset_property_window.hpp  asset_window.cpp  asset_window.hpp  config.hpp  content_browser.cpp  content_browser.hpp  context.cpp  context.hpp  dialog.cpp  dialog.hpp  entity_list_window.cpp  entity_list_window.hpp  file_dialog.cpp  file_dialog.hpp  filetype.cpp  filetype.hpp  game_window.cpp  game_window.hpp  gizmos.cpp  gizmos.hpp  image_view_canva.cpp  image_view_canva.hpp  import_asset.cpp  import_asset.hpp  input_text_window.cpp  input_text_window.hpp  inspector.cpp  inspector.hpp  main.cpp  show_component.cpp  show_component.hpp  spawn_component.cpp  spawn_component.hpp  tilesheet_editor.cpp  tilesheet_editor.hpp  (+7 more)
engine/: .clang-format  CMakeLists.txt  CMakePresets.json  nickel_engine_project_path_template.toml
engine/cmake/: add_3rdlib.cmake  compile_shader.cmake  target_category_helper.cmake
engine/doc/: CMakeLists.txt  Doxyfile.inc  engine_arch.md  mainpage.md
engine/editor/: .gitignore  CMakeLists.txt  package-lock.json  package.json
engine/editor/cpp/: addon.cpp
engine/editor/html/: index.html
engine/editor/js/: main.js  renderer.js
engine/engine/: CMakeLists.txt
engine/engine/3rdlibs/: CMakeLists.txt
engine/engine/code_generator/: CMakeLists.txt  parser.py  time_record.pkl
engine/engine/main_entry/: CMakeLists.txt  runtime.cpp
engine/engine/nickel/: context.hpp  nickel.hpp  runtime.hpp
engine/engine/refl_code_generator/: CMakeLists.txt  parser.py  requirements.txt
engine/engine/src/: context.cpp  nickel.cpp  runtime.cpp
engine/tests/: CMakeLists.txt
engine/tests/3rdlibs/: CMakeLists.txt
engine/tests/ecs/: CMakeLists.txt  sparse_set.cpp
engine/tests/handle/: CMakeLists.txt  main.cpp
engine/tests/math/: CMakeLists.txt  dmath.cpp  smath.cpp
engine/tests/memory/: CMakeLists.txt  main.cpp
engine/tests/physics/: CMakeLists.txt
engine/tests/refl/: CMakeLists.txt
engine/tests/render/: CMakeLists.txt  common.cpp  common.hpp
engine/tests/sandbox/: CMakeLists.txt  main.cpp
engine/tests/script/: CMakeLists.txt
engine/tools/: CMakeLists.txt
engine/tools/3rdlibs/: CMakeLists.txt
engine/tools/editor/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.hpp  mainwindow.ui
engine/tools/refl_code_generator/: CMakeLists.txt  main.cpp  parser.py  requirements.txt
engine/tools/shader_compiler/: CMakeLists.txt  main.cpp
engine/tools/vehicle_editor/: CMakeLists.txt  imgui_window.cpp  imgui_window.hpp  main.cpp
nickel/: CMakeLists.txt
nickel/include/: nickel.hpp  pch.hpp  stdpch.hpp
nickel/include/anim/: anim.hpp  keyframe.hpp  tweeny.hpp
nickel/include/audio/: audio.hpp
nickel/include/common/: assert.hpp  asset.hpp  asset_manager.hpp  cgmath.hpp  config.hpp  data_id.hpp  data_pool.hpp  data_storage.hpp  ecs.hpp  filetype.hpp  handle.hpp  hierarchy.hpp  log_tag.hpp  manager.hpp  profile.hpp  ref.hpp  singlton.hpp  sparse_set.hpp  storage.hpp  stream.hpp  timer.hpp  transform.hpp  typeid_generator.hpp  utf8string.hpp  util.hpp
nickel/include/config/: config.hpp
nickel/include/core/: assert.hpp  asset.hpp  cgmath.hpp  errort.hpp  geom.hpp  gogl.hpp  handle.hpp  log.hpp  log_tag.hpp  manager.hpp  profile.hpp  resource.hpp  singlton.hpp  utf8string.hpp  util.hpp
nickel/include/geom/: basic_geom.hpp  geom2d.hpp  geom3d.hpp
nickel/include/graphics/: batch.hpp  camera.hpp  context.hpp  font.hpp  gltf.hpp  gogl.hpp  material.hpp  mesh.hpp  renderer2d.hpp  sprite.hpp  system.hpp  texture.hpp  tilemap.hpp  tilesheet.hpp  vertex.hpp
nickel/include/input/: device.hpp  input.hpp
nickel/include/misc/: argv.hpp  asset.hpp  asset_manager.hpp  dllopen.hpp  filetype.hpp  hierarchy.hpp  name.hpp  prefab.hpp  project.hpp  scene.hpp  serd.hpp  timer.hpp  transform.hpp  tweeny.hpp
nickel/include/physics/: body.hpp  capsule_shape.hpp  circle_shape.hpp  config.hpp  manifold.hpp  manifold_solver.hpp  obb_shape.hpp  physic_solver.hpp  polygon_shape.hpp  shape.hpp  world.hpp
nickel/include/refl/: anim.hpp  camera.hpp  cgmath.hpp  drefl.hpp  keyframe.hpp  sampler.hpp  sprite.hpp  tilesheet.hpp  transform.hpp  window.hpp
nickel/include/renderer/: batch.hpp  camera.hpp  context.hpp  font.hpp  material.hpp  mesh.hpp  renderer2d.hpp  sprite.hpp  texture.hpp  tilemap.hpp  tilesheet.hpp  vertex.hpp
nickel/include/rhi/: buffer.hpp  commands.hpp  context.hpp  descriptor.hpp  device.hpp  enums.hpp  framebuffer.hpp  image.hpp  instance.hpp  pipeline.hpp  renderpass.hpp  rhi.hpp  shader.hpp  sync.hpp  vertex.hpp  vertex_layout.hpp
nickel/include/script/: luabind.hpp  script.hpp
nickel/include/system/: graphics.hpp  (+2 more)
nickel/shader/: font_frag.shader  font_vertex.shader  frag.shader  vertex.shader
nickel/src/: nickel.cpp  pch.cpp
plugins/imgui/: CMakeLists.txt  imgui_plugin.cpp  imgui_plugin.hpp
test/: CMakeLists.txt  catch.hpp  cgmath.cpp  csv_iterator.cpp  data_pool.cpp  geom.cpp  gjk.cpp  math.cpp  script.cpp  sparse_set.cpp  test.luau  tweeny.cpp
test/asset_manager/: CMakeLists.txt  asset_manager.cpp  nickel_test_person.person
test/graphics/: CMakeLists.txt  imgui_display.cpp  render.cpp
test/testbed/: CMakeLists.txt
(+1161 files in other folders)
