set(SDL_CAMERA OFF)
set(SDL_EXAMPLES OFF)
set(SDL_GPU OFF)
set(SDL_RENDER OFF)
set(SDL_HAPTIC OFF)
set(SDL_AUDIO OFF)
set(SDL_TESTS OFF)
set(SDL_TEST_LIBRARY OFF)
set(SDL_INSTALL OFF)
set(SDL_DISABLE_INSTALL ON)
set(SDL_DISABLE_UNINSTALL ON)
if (ANDROID)
    set(SDL_SHARED ON)
    set(SDL_STATIC OFF)
else()
    set(SDL_SHARED OFF)
    set(SDL_STATIC ON)
endif()
add_subdirectory(SDL)

set(VOLK_PULL_IN_VULKAN ON)
set(VULKAN_HEADERS_INSTALL_DIR ${CMAKE_CURRENT_SOURCE_DIR}/Vulkan-Headers)
set(VOLK_STATIC ON)
set(VOLK_INSTALL OFF)
add_subdirectory(volk)

set(SPDLOG_ENABLE_PCH ON)
add_subdirectory(spdlog)

mark_as_3rdlib(SDL3-static)
mark_as_3rdlib(SDL3-shared)
mark_as_3rdlib(SDL_uclibc)
mark_as_3rdlib(Vulkan-Headers)
mark_as_3rdlib(spdlog)
mark_as_3rdlib(volk)
